@@ -3,13 +3,17 @@ lib_LTLIBRARIES = libmercator-0.2.la
 libmercator_0_2_la_LDFLAGS = -version-info @MERCATOR_VERSION_INFO@
 
 libmercator_0_2_la_SOURCES = \
+	tile.cpp \
 	Mercator.cpp \
+	Matrix.cpp \
 	Terrain.cpp \
 	Segment.cpp
 
 libmercatordir = $(includedir)/Mercator-0.2/Mercator
 
 libmercator_HEADERS = \
+	tile.h \
 	Mercator.h \
+	Matrix.h \
 	Terrain.h \
 	Segment.h
