@@ -1,0 +1,7 @@
+// This file may be redistributed and modified only under the terms of
+// the GNU General Public License (See COPYING for details).
+// Copyright (C) 2003 Alistair Riddoch
+
+#include "Matrix.h"
+
+Mercator::Matrix<4, 4> foo;
