@@ -1,0 +1,4 @@
+void fill1d(int size, float falloff, float roughness, float *array);
+void fill2d(int size, float falloff, float roughness, float *array);
+void tile(int size, float falloff, float roughness, 
+	  float p1, float p2, float p3, float p4, float *array);
